Update gradient color stop serialization to match CSS Images4

https://github.com/w3c/csswg-drafts/issues/2714 clarified that
serialization should always use the expanded form.

Bug: 850537
Change-Id: I77e60df149fb490b0c2c1db78f020a7246ea7b5c
Reviewed-on: https://chromium-review.googlesource.com/1090820
Reviewed-by: Fredrik Söderquist <fs@opera.com>
Commit-Queue: Florin Malita <fmalita@chromium.org>
Cr-Commit-Position: refs/heads/master@{#565358}
Former-commit-id: 8f672b21c1de610b8cc85790abbfcb592ab52ed7